# Matplotlib_Medical_Customzied_Styles

./: .aiignore  .gitignore  AGENTS.md  CONTRIBUTING.md  GEMINI.md  README.md  llms.md  pyproject.toml
.github/workflows/: check.yaml  deploy-docs.yaml
examples/: bar_graphpad.py  bar_multi_graphpad.py  boxplot_graphpad.py  heatmap_aggregate_deeptools.py  heatmap_deeptools.py  scatter_graphpad.py
mmcs/: __init__.py  _context.py  _quick_api.py  _registry.py
mmcs/_quick_api/: __init__.py  _bar.py  _box.py  _boxviolin.py  _bubble.py  _density.py  _heatmap.py  _histogram.py  _regression.py  _scatter.py  _violin.py
mmcs/_utils/: __init__.py  _annotation.py  _export.py  _stats.py
mmcs/charts/: __init__.py  _bar.py  _boxplot.py  _heatmap.py  _heatmap_aggregate.py  _scatter.py
mmcs/styles/deeptools/: heatmap_clustered.mplstyle  heatmap_multi.mplstyle  metadata.json
mmcs/styles/ggplot/: bubble.mplstyle  metadata.json
mmcs/styles/graphpad_prism/: bar.mplstyle  bar_clustered_scatter.mplstyle  bar_multi.mplstyle  bar_scatter.mplstyle  box_violin.mplstyle  boxplot.mplstyle  density.mplstyle  graphpad_prism.mplstyle  histogram.mplstyle  metadata.json  regression.mplstyle  scatter.mplstyle  violin.mplstyle
scripts/: check.sh  new_style.sh
styles/clustered_genomic_heatmap/: example.py  readme.md
styles/clustered_genomic_heatmap/assets/: clustered_genomic_heatmap.mplstyle
styles/mutiple_columns_charts/: readme.md
styles/mutiple_genomic_heatmaps/: example.py  readme.md
styles/mutiple_genomic_heatmaps/assets/: genomic_heatmap.mplstyle
styles/single_box_violinplot_chart/: example.py  example_split.py  readme.md
styles/single_box_violinplot_chart/assets/: single_box_violinplot_chart.mplstyle
styles/single_boxplot_chart/: example.py  readme.md
styles/single_boxplot_chart/assets/: single_boxplot_chart.mplstyle
styles/single_bubbleplot_chart/: example.py  readme.md
styles/single_bubbleplot_chart/assets/: single_bubbleplot_chart.mplstyle
styles/single_clustered_columns_scatter_chart/: example.py
styles/single_columns_chart/: example.py  readme.md
styles/single_columns_chart/assets/: single_columns_chart.mplstyle
styles/single_columns_scatter_chart/: example.py  readme.md
styles/single_densityplot_chart/: example.py  readme.md
styles/single_violinplot_chart/: example.py  example_split.py  readme.md
styles/single_volinplot_chart/: example.py  example_split.py  readme.md
test/: test_examples.py  test_styles.py
tests/: test_examples.py  test_golden.py  test_styles.py
(+4 files in other folders)
