[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "matplotlib-medical-customed-styles"
version = "0.1.0"
description = "A collection of custom matplotlib styles specifically designed for the medical and biological sciences."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "YangShu233-Snow"}
]
keywords = ["matplotlib", "graphpad", "scientific-plotting", "medical-science"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "kneed>=0.8.6",
]

[project.urls]
"Homepage" = "https://github.com/YangShu233-Snow/Matplotlib_Medical_Customed_Styles"
"Bug Tracker" = "https://github.com/YangShu233-Snow/Matplotlib_Medical_Customed_Styles/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.setuptools]
packages = ["styles"]

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ["."]
