[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mmcs"
version = "0.1.0"
description = "Publication-ready matplotlib styles and chart builders for the medical and biological sciences."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "YangShu233-Snow"}
]
keywords = ["matplotlib", "graphpad", "scientific-plotting", "medical-science", "bioinformatics"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1"
]

[project.urls]
"Homepage" = "https://github.com/YangShu233-Snow/Matplotlib_Medial_Customized_Styles"
"Bug Tracker" = "https://github.com/YangShu233-Snow/Matplotlib_Medial_Customized_Styles/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.11.0",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.setuptools.packages.find]
include = ["mmcs", "mmcs.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
